--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body {
 .container__titulo {
     font-size: 28px;
     font-weight: 700;
+    color: var(--branco-principal);
 }
 
 .container__imagem {
